--- a/css/style.css
+++ b/css/style.css
@@ -397,7 +397,7 @@ form {   margin-right: 280px;margin-left: 1px;   margin-top: 320px;}
                justify-content: center; 
                padding: 6px 25px;
                display: flex;
-               bottom :260px ;  
+               bottom :300px ;  
                right: 8%;
                position: relative; 
                border-radius: 2%; } 
@@ -662,10 +662,10 @@ input  {  width: 80%;}
 .Gallery {  width: 100vw ;
             margin-bottom: 400px;  
             height: auto;
-            margin-left: 0;
+            margin-left: 10px;
             /* padding: 17px 160px;  */
             display: flex;}   
- 
+  .Gallery .frist h2,  .Gallery .frist p{  margin :  auto  auto auto  -30px;}
  
   .Gallery .frist {  
                 font-size: 50px;
@@ -686,7 +686,7 @@ input  {  width: 80%;}
  
 
   .Gallery .container div img { 
-                                border-radius: 12px;
+                                border-radius: 17px;
                                 width: 150vh; 
                                 height: 90vh;
                                 margin: 50px 40px;
@@ -701,13 +701,13 @@ input  {  width: 80%;}
                             padding: -200px 20px 0;}
 
 .Gallery .container div p{    
-                            border-radius: 12px;
-                                width: 157vh; 
-                                height: 110vh;
+                            border-radius: 17px;
+                                width: 177vh; 
+                                height: 150vh;
                             text-align: center ; 
                             padding:0  50% 80px 10% ;
                             font-weight: 250 ;
-                            font-size: 40px; }
+                            font-size: 60px; }
 
 
    .Contact_us { 
@@ -736,7 +736,7 @@ form {     justify-content: center;
 
   input {
             width: 100% ;
-            height: 10vw ;
+            height: 20vw ;
             font-size: 28px ;
             color: white ;
             margin: 23px -23px 10px -12px ;}
@@ -778,3 +778,4 @@ form {     justify-content: center;
 @media (min-width: 601px)  {  .bars {display: none; } 
 
 }
+
