--- a/css/style.css
+++ b/css/style.css
@@ -428,7 +428,7 @@ form {   margin-right: 280px;margin-left: 1px;   margin-top: 320px;}
 .Contact_us { height: 100%;}    }     
 
 
-@media (min-width: 601px) and (max-width: 768px) { 
+@media (min-width: 601px) and (max-width: 1040px) { 
   
    
   /* body { width: 95vw;} */
@@ -662,10 +662,10 @@ input  {  width: 80%;}
 .Gallery {  width: 100vw ;
             margin-bottom: 400px;  
             height: auto;
-            margin-left: 10px;
+            margin-left: 25px;
             /* padding: 17px 160px;  */
             display: flex;}   
-  .Gallery .frist h2,  .Gallery .frist p{  margin :  auto  auto auto  -30px;}
+  .Gallery .frist h2,  .Gallery .frist p{  bottom :  -60px;}
  
   .Gallery .frist {  
                 font-size: 50px;
@@ -695,8 +695,8 @@ input  {  width: 80%;}
     .Gallery .container div:hover p {   
                             font-family:  "Raleway", sans-serif;
                             margin-top: 46px;
-                            height:83% ; 
-                            width: 91%;
+                            height:88% ; 
+                            width: 96%;
                             margin-left: 36px;    
                             padding: -200px 20px 0;}
 
@@ -747,8 +747,8 @@ form {     justify-content: center;
 
   form button {
             width: 50% ;
-            padding: 15px ;
-            font-size: 28px ;
+            padding: 25px ;
+            font-size: 38px ;
             margin: 60px -3px 20px ;}
 
   .info {
@@ -778,4 +778,5 @@ form {     justify-content: center;
 @media (min-width: 601px)  {  .bars {display: none; } 
 
 }
+
 
