--- a/css/style.css
+++ b/css/style.css
@@ -409,6 +409,7 @@ form {   margin-right: 280px;margin-left: 1px;   margin-top: 320px;}
                               transform :0.6s ease;
                               pointer-events: none; 
                               list-style: none; 
+                              z-index : 1000  ;
                               width: 90vh;
                               height: 40vh; 
                               margin-right: 210px;
@@ -418,17 +419,17 @@ form {   margin-right: 280px;margin-left: 1px;   margin-top: 320px;}
                               margin-left: 411px; 
                               padding-right: 0%;}  
 
-    .bars ul li{  height: 7vh;    justify-content: center; display: flex;   }  
+    .bars ul li{  height: 7vh;    justify-content: center; display: flex;  z-index : 1000  ; }  
     
-    .list{   background-color: rgb(255, 12, 12);color:gray;  padding: auto 200px  ;  }
+    .list{   background-color: rgb(255, 12, 12);color:gray;  padding: auto 200px  ;z-index : 1000  ;  }
 
 
-@media  (min-width: 769px) { 
+@media  (min-width: 600px) { 
   .landing   { width: 100%; } 
 .Contact_us { height: 100%;}    }     
 
 
-@media (min-width: 601px) and (max-width: 1040px) { 
+@media (min-width: 601px) and (max-width: 7680px) { 
   
    
   /* body { width: 95vw;} */
@@ -560,9 +561,9 @@ input  {  width: 80%;}
                       text-decoration: none;
                       display: block;}
 
-.bars ul li:hover {   background: var(--maincolor);}
+.bars ul li:hover {   background: var(--maincolor);z-index : 1000  ;}
 
-.bars:hover ul {      opacity: 1;
+.bars:hover ul {      opacity: 1;z-index : 1000  ;
                       transform: translateY(0) scale(1);  
                       pointer-events: auto;
                       display: block;  }
@@ -570,12 +571,12 @@ input  {  width: 80%;}
 .bars ul li a {
                       color: gray;         
                       text-decoration: none;  
-                      display: block;
+                      display: block;z-index : 1000  ;
                       font-size: 30px;
                       font-family: "Raleway", sans-serif;
                       padding: 10px 0px 10px 240px;}
 
-.bars ul li a:hover { color: var(--secandarycolor);   background: rgba(0,0,0,0.05);  }
+.bars ul li a:hover { color: var(--secandarycolor);   background: rgba(0,0,0,0.05); z-index : 1000  ; }
 
  
 
@@ -778,6 +779,7 @@ form {     justify-content: center;
 @media (min-width: 601px)  {  .bars {display: none; } 
 
 }
+
 
 
 
