--- a/css/style.css
+++ b/css/style.css
@@ -539,7 +539,7 @@ input  {  width: 80%;}
             }
  
             
-            span  { z-index. : 200; }
+            span  { z-index. : 200 !important ; }
 
   .landing .container h2{ margin: 16px  auto auto -10px ; left: 9%;  top: 7%;font-size: 40px; }
    
@@ -779,6 +779,7 @@ form {     justify-content: center;
 @media (min-width: 601px)  {  .bars {display: none; } 
 
 }
+
 
 
 
