--- a/css/style.css
+++ b/css/style.css
@@ -615,7 +615,7 @@ input  {  width: 80%;}
 
   .top:not(.in) { margin-left: 80px;  }
 
-  .box {     margin: -180px 50px;
+  .box {     margin: -180px 50px; font-weight  :300. !important   ;
              padding: 20px 223px ; 
             }
 
@@ -779,6 +779,7 @@ form {     justify-content: center;
 @media (min-width: 601px)  {  .bars {display: none; } 
 
 }
+
 
 
 
